disable ph-no-capture

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <input type="text" id="name" placeholder="Enter your name">
 
-    <input type="password" id="password" placeholder="Enter your password" class="ph-no-capture" autocomplete="off">
+    <input type="password" id="password" placeholder="Enter your password" autocomplete="off">
 
     <input type="checkbox" id="togglePassword">
     <label for="togglePassword"> Show password</label>
